Added the Stock Item model, controllers and swagger to the API
