# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2020_02_16_221352) do
+ActiveRecord::Schema.define(version: 2020_02_16_230621) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -22,6 +22,16 @@ ActiveRecord::Schema.define(version: 2020_02_16_221352) do
     t.datetime "updated_at", precision: 6, null: false
   end
 
+  create_table "stock_items", force: :cascade do |t|
+    t.integer "items", default: 0
+    t.bigint "product_id", null: false
+    t.bigint "store_id", null: false
+    t.datetime "created_at", precision: 6, null: false
+    t.datetime "updated_at", precision: 6, null: false
+    t.index ["product_id"], name: "index_stock_items_on_product_id"
+    t.index ["store_id"], name: "index_stock_items_on_store_id"
+  end
+
   create_table "stores", force: :cascade do |t|
     t.string "name"
     t.string "address"
@@ -29,4 +39,6 @@ ActiveRecord::Schema.define(version: 2020_02_16_221352) do
     t.datetime "updated_at", precision: 6, null: false
   end
 
+  add_foreign_key "stock_items", "products"
+  add_foreign_key "stock_items", "stores"
 end
